src/examples/should_fail/multiple_terminal_enums.kiki
start Foo

struct Foo

terminal Token1 {
    $Num: isize
}

terminal Token2 {
    $Num: isize
}
